Small fixes: Rework style to match brand guideline color. Rework responsive css, medium sized devices use desktop styles. Refactor modal and ClassCard to not have blur flicker issue. Refactor modal, forms to fix squished issue. Correctize class card animation. Implement feature redirect to logout view when user logout. Change background color to match subtleness of the new color. Increase font in inputs so the ios does not zoom out. Fix cookie banner weird shadow and text flow.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -28,12 +28,7 @@
 
 html {
     display: flex;
-    background-color: #d8d8d8;
-}
-
-#root {
-    transition: filter 0.3s ease;
-    will-change: filter;
+    background: url('./assets/Sports.png');
 }
 
 input[type='number']::-webkit-inner-spin-button,
@@ -53,44 +48,31 @@ input[type='number']::-webkit-outer-spin-button {
         max-height: 100%;
         max-width: 100%;
     }
+    html {
+        min-height: 480px;
+    }
 
     /* for small devices */
-    @media (max-width: 320px) and (max-height: 600px) {
+    @media (max-width: 320px) {
         html {
             font-size: 6px;
         }
     }
 }
 
-/* Small devices (portrait tablets and large phones, 600px and up) */
-
 @media only screen and (min-width: 600px) {
-    body {
-        padding: 4rem;
-    }
-    html {
-        font-size: 8px;
-    }
-}
-
-/* Medium devices (landscape tablets, 768px and up) */
-
-@media only screen and (min-width: 768px) {
-    html {
-        font-size: 10px;
-    }
-}
-
-/* large devices (landscape tablets, 768px and up) */
-
-@media only screen and (min-width: 992px) {
     body {
         max-height: 812px;
         max-width: 480px;
         padding: 0;
         box-shadow: 12px 24px 100px rgba(0, 0, 0, 0.5);
+        border-radius: 2rem;
     }
     html {
         font-size: 7.5px;
+        min-height: 580px;
+    }
+    #root {
+        border-radius: 2rem;
     }
 }
